--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,17 @@
   .font-outline-4 {
     -webkit-text-stroke: 4px rgb(4, 18, 37);
   }
+
+  .text-stroke-3 {
+    text-shadow: -1px -1px 0 rgb(245, 245, 245), 1px -1px 0 rgb(245, 245, 245), -1px 1px 0 rgb(245, 245, 245), 1px 1px 0 rgb(245, 245, 245);
+}
+
+.shadow-yellow-big {
+  -webkit-box-shadow: 70px 70px 40px -40px rgba(255,198,0,0.28);
+  -moz-box-shadow: 70px 70px 40px -40px rgba(255,198,0,0.28);
+  box-shadow: 70px 70px 40px -40px rgba(255,198,0,0.28);
+}
+
 }
 
 /* 
